Correcting alignment

--- a/src/app/letterboard/letterboard.component.scss
+++ b/src/app/letterboard/letterboard.component.scss
@@ -30,7 +30,6 @@
       .letter-button {
         width: 18%;
         margin: 1%;
-        height: 18%;
         border-radius: 0px;
         border: 2px solid grey;
         height: 65px;
